Finalizando implementação de questões

--- a/GestaoTestes.WinForm/GestaoTestes.WinForm.csproj
+++ b/GestaoTestes.WinForm/GestaoTestes.WinForm.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="PdfSharp" Version="1.50.5147" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
   </ItemGroup>
 
